# currency-checker-rs

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
migrations/2022-07-24-131910_currency-init/: up.sql
src/: main.rs  schema.rs
src/configuration/: source.rs
src/dto/: cb_response.rs  mod.rs
src/form_param/: date.rs
src/handler/: by_date.rs  mod.rs  sync.rs  sync_by_date.rs  today.rs
src/model/: currency.rs
