[package]
name = "currency-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2", "uuidv07", "numeric"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = "0.11.11"
serde-xml-rs = "0.5.1"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]